Change color of to-do-list to blue

--- a/to-do-list.css
+++ b/to-do-list.css
@@ -1,12 +1,12 @@
 /* Abdulaziz bin saif  442102616 */
 
 .my-list {
-    background-color: #f7f381;
+    background-color: #8193f7;
     Padding: 8px 24px;
     Width: 500px;
     font-size: 30px;
-    Border: 1px solid #f7f381;
-    background-color: #f7f381;
+    Border: 1px solid #8193f7;
+    background-color: #8193f7;
     box-shadow: 0 0 10px 2px #333333;
     margin: auto;
 }
